--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -77,6 +77,73 @@
         </div>
     </div>
 </section>
+<section id="main-features">
+    <div class="container">
+        <div class="row">
+            <!-- features item -->
+            <div id="features" class="owl-carousel owl-theme" style="display: block; opacity: 1;">
+                <div class="owl-wrapper-outer">
+                    <div class="owl-wrapper" style="display: block; transform-origin: 585px center 0px; perspective-origin: 585px center; width: 3880px; left: 0px; transition: all 0ms ease; transform: translate3d(0px, 0px, 0px);">
+                        <div class="owl-item" style="width: 970px;">
+                            <div class="item">
+                                <div class="features-item">
+                        <!-- features media -->
+                                    <div class="col-md-6 feature-media media-wrapper wow fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
+                                        VIMO
+                                    </div>
+                        <!-- /features media -->
+                        <!-- features content -->
+                                    <div class="col-md-6 feature-desc wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInUp;">
+                                        <h3>Main Features of Meghna</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
+                                        <a href="#" class="btn btn-transparent">Learn More</a>
+                                        <a href="#" class="btn btn-transparent">Purchase Theme</a>
+                                    </div>
+                        <!-- /features content -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="owl-item" style="width: 970px;">
+                            <div class="item">
+                                <div class="features-item">
+
+                            <!-- features media -->
+                                    <div class="col-md-6 feature-media wow fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
+                                        BLOG
+                                    </div>
+                            <!-- /features media -->
+
+                            <!-- features content -->
+                                    <div class="col-md-6 feature-desc wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInUp;">
+                                        <h3>Main Features of Meghna</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
+                                        <a href="#" class="btn btn-transparent">Learn More</a>
+                                        <a href="#" class="btn btn-transparent">Purchase Theme</a>
+                                    </div>
+                            <!-- /features content -->
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-controls clickable">
+                    <div class="owl-pagination">
+                        <div class="owl-page active">
+                            <span class=""></span>
+                        </div>
+                        <div class="owl-page">
+                            <span class=""></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /features item -->
+        </div> 		<!-- End row -->
+    </div>   	<!-- End container -->
+</section>
 
 <!-- Modal -->
 <div class="modal fade" id="LogoutModal" tabindex="-1" role="dialog" aria-labelledby="LogoutModalLabel" aria-hidden="true" #LoginModal>
