--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,3 +1,10 @@
+section{
+    background-color: #2B2C30;
+    font-family: 'Ubuntu', 'Arial', sans-serif;
+    line-height: 1.5;
+    color: #ddd;
+    padding: 70px;
+}
 .bgImage{
     background-image: url("../../../resource/image/homepage/1200x747.jpg");
     background-size: 100%;
@@ -22,6 +29,69 @@
 }
 .poptop{
     z-index:1000;
+}
+.icon-box {
+    position: relative;
+    width: 160px;
+    height: 92.38px;
+    background-color: transparent;
+    margin: 46.19px auto 60px;
+    padding: 20px 0;
+    border-left: solid 3px #ddd;
+    border-right: solid 3px #ddd;
+
+    -webkit-transform: translateZ(0px);
+    -moz-transform: translateZ(0px);
+    -ms-transform: translateZ(0px);
+    -o-transform: translateZ(0px);
+    transform: translateZ(0px);
+
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+
+    -webkit-transition-property: transform;
+    -moz-transition-property: transform;
+    -o-transition-property: transform;
+    transition-property: transform;
+}
+
+.icon-box:hover {
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+    transform: translateY(-10px);
+}
+
+.icon-box:before,
+.icon-box:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    width: 113.14px;
+    height: 113.14px;
+    background-color: inherit;
+    left: 20.4315px;
+
+    -webkit-transform: scaleY(0.5774) rotate(-45deg);
+    -moz-transform: scaleY(0.5774) rotate(-45deg);
+    -ms-transform: scaleY(0.5774) rotate(-45deg);
+    -o-transform: scaleY(0.5774) rotate(-45deg);
+    transform: scaleY(0.5774) rotate(-45deg);
+}
+
+.icon-box:before {
+    top: -56.5685px;
+    border-top: solid 4.2426px #ddd;
+    border-right: solid 4.2426px #ddd;
+}
+
+.icon-box:after {
+    bottom: -56.5685px;
+    border-bottom: solid 4.2426px #ddd;
+    border-left: solid 4.2426px #ddd;
 }
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
