--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -84,16 +84,16 @@
             <div id="features" class="owl-carousel owl-theme" style="display: block; opacity: 1;">
                 <div class="owl-wrapper-outer">
                     <div class="owl-wrapper" style="display: block; transform-origin: 585px center 0px; perspective-origin: 585px center; width: 3880px; left: 0px; transition: all 0ms ease; transform: translate3d(0px, 0px, 0px);">
-                        <div class="owl-item " style="width: 970px;">
+                        <div class="owl-item" style="width:33%;">
                             <div class="item">
                                 <div class="features-item">
                         <!-- features media -->
-                                    <div class="feature-media media-wrapper wow fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
+                                    <div class="feature-media media-wrapper wow fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp; width:86%;">
                                         VIMO
                                     </div>
                         <!-- /features media -->
                         <!-- features content -->
-                                    <div class="feature-desc wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInUp;">
+                                    <div class="feature-desc wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInUp; width:86%;">
                                         <h3>Main Features of Meghna</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
@@ -104,18 +104,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="owl-item" style="width: 970px;">
+                        <div class="owl-item" style="width:30%;">
                             <div class="item">
                                 <div class="features-item">
 
                             <!-- features media -->
-                                    <div class="col-md-6 feature-media wow fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
+                                    <div class="feature-media wow fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp; width:86%;">
                                         BLOG
                                     </div>
                             <!-- /features media -->
 
                             <!-- features content -->
-                                    <div class="col-md-6 feature-desc wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInUp;">
+                                    <div class="feature-desc wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInUp; width:86%;">
                                         <h3>Main Features of Meghna</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, dolores corporis maxime modi amet nisi quod delectus voluptas deleniti facere. Suscipit, modi ex magni quam nesciunt ullam nemo natus soluta!</p>
