--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,14 @@
 <!-- Button trigger modal -->
-<div class="all login">
-  <div class="container">
-    <div class="row justify-content-center align-items-center">
-      <div class="col-12 col-md-9">
+<div class="all login align-items-center">
+  <div class="container loginContainer">
+    <div class="row justify-content-md-center">
+      <div class="col col-lg-2">
         <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#LoginModal">
           登陆
         </button>
       </div>
-      <div class="col-4 col-md-3">
+      <div class="col-12 col-md-auto"></div>
+      <div class="col col-lg-2">
         <button type="button" class="btn btn-primary loginBtn" data-toggle="modal" data-target="#SignInModal">
           注册
         </button>
