--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -41,7 +41,7 @@
 <section id="about" class="bg-one">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 text-center wow fadeInUp" data-wow-duration="500ms" >
+            <div class="col-md-4 text-center" data-wow-duration="500ms" >
                 <div class="wrap-about">
                     <div class="icon-box">
                         <i class="fa fa-lightbulb-o fa-4x"></i>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms">
+            <div class="col-md-4 text-center" data-wow-duration="500ms" data-wow-delay="250ms">
                 <div class="wrap-about">
                     <div class="icon-box">
                         <i class="fa fa-users fa-4x"></i>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="500ms">
+            <div class="col-md-4 text-center "data-wow-duration="500ms" data-wow-delay="500ms">
                 <div class="wrap-about kill-margin-bottom">
                     <div class="icon-box">
                         <i class="fa fa-users fa-4x"></i>
@@ -83,7 +83,7 @@
             <!-- features item -->
             <div id="features" class="owl-carousel owl-theme" style="display: block; opacity: 1;">
                 <div class="owl-wrapper-outer">
-                    <div class="owl-wrapper" style="display: block; transform-origin: 585px center 0px; perspective-origin: 585px center; width: 4680px; left: 0px; transition: all 800ms ease; transform: translate3d(0px, 0px, 0px);">
+                    <div class="owl-wrapper" style="display: block; transform-origin: 585px center 0; perspective-origin: 585px center; width: 4680px; left: 0; transition: all 800ms ease; transform: translate3d(0, 0, 0);">
                         <div class="owl-item">
                             <div class="item">
                                 <div class="col row">
@@ -115,6 +115,220 @@
             </div>
             <!-- /features item -->
         </div> 		<!-- End row -->
+    </div>   	<!-- End container -->
+</section>
+
+<section id="counter" class="parallax-section" style="background-position: 50% 40px;">
+    <div class="container">
+        <div class="row">
+
+            <!-- first count item -->
+            <div class="col-md-3 col-sm-6 col-xs-12 text-center animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInDown;">
+                <div class="counters-item">
+                    <div>
+                        <span class="countTo" data-speed="3000" data-to="320">320</span>
+                    </div>
+                    <i class="fa fa-users fa-3x"></i>
+                    <h3>Happy Clients</h3>
+                </div>
+            </div>
+            <!-- end first count item -->
+
+            <!-- second count item -->
+            <div class="col-md-3 col-sm-6 col-xs-12 text-center fadeInDown animated" data-wow-duration="500ms" data-wow-delay="200ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 200ms; animation-name: fadeInDown;">
+                <div class="counters-item">
+                    <div>
+                        <span class="countTo" data-speed="3000" data-to="565">565</span>
+                    </div>
+                    <i class="fa fa-check-square fa-3x"></i>
+                    <h3>Projects completed</h3>
+                </div>
+            </div>
+            <!-- end second count item -->
+
+            <!-- third count item -->
+            <div class="col-md-3 col-sm-6 col-xs-12 text-center fadeInDown animated" data-wow-duration="500ms" data-wow-delay="400ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 400ms; animation-name: fadeInDown;">
+                <div class="counters-item">
+                    <div>
+                        <span class="countTo" data-speed="3000" data-to="95">95</span>
+                        <span>%</span>
+                    </div>
+                    <i class="fa fa-thumbs-up fa-3x"></i>
+                    <h3>Positive feedback</h3>
+
+                </div>
+            </div>
+            <!-- end third count item -->
+
+            <!-- fourth count item -->
+            <div class="col-md-3 col-sm-6 col-xs-12 text-center animated" data-wow-duration="500ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 600ms; animation-name: fadeInDown;">
+                <div class="counters-item kill-margin-bottom">
+                    <div>
+                        <span class="countTo" data-speed="3000" data-to="2500">2500</span>
+                    </div>
+                    <i class="fa fa-coffee fa-3x"></i>
+                    <h3>Cups of Coffee</h3>
+                </div>
+            </div>
+            <!-- end fourth count item -->
+
+        </div> 		<!-- end row -->
+    </div>   	<!-- end container -->
+</section>
+
+<section id="our-team">
+    <div class="container">
+        <div class="row">
+
+            <!-- section title -->
+            <div class="title text-center fadeInUp animated" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
+                <h2>Our <span class="color">Team</span></h2>
+                <div class="border"></div>
+            </div>
+            <!-- /section title -->
+
+            <!-- team member -->
+            <div class="col-md-3 col-sm-6 fadeInDown animated team" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInDown;">
+                <article class="team-mate">
+                    <div class="member-photo">
+                        <!-- member photo -->
+                        <img class="img-responsive" src="../../../resource/image/homepage/team/member-1.jpg" alt="Meghna">
+                        <!-- /member photo -->
+
+                        <!-- member social profile -->
+                        <div class="mask">
+                            <ul class="clearfix">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                        <!-- /member social profile -->
+                    </div>
+
+                    <!-- member name & designation -->
+                    <div class="member-title">
+                        <h3>Abul Mal Muhit</h3>
+                        <span>CEO/Founder</span>
+                    </div>
+                    <!-- /member name & designation -->
+
+                    <!-- about member -->
+                    <div class="member-info">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+                    </div>
+                    <!-- /about member -->
+
+                </article>
+            </div>
+            <!-- end team member -->
+
+            <!-- team member -->
+            <div class="col-md-3 col-sm-6 fadeInDown animated team" data-wow-duration="500ms" data-wow-delay="200ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 200ms; animation-name: fadeInDown;">
+                <article class="team-mate">
+                    <div class="member-photo">
+                        <!-- member photo -->
+                        <img class="img-responsive" src="../../../resource/image/homepage/team/member-2.jpg" alt="Meghna">
+                        <!-- /member photo -->
+
+                        <!-- member social profile -->
+                        <div class="mask">
+                            <ul class="clearfix">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                        <!-- /member social profile -->
+                    </div>
+
+                    <!-- member name & designation -->
+                    <div class="member-title">
+                        <h3>Frank Miller</h3>
+                        <span>Manager</span>
+                    </div>
+                    <!-- /member name & designation -->
+
+                    <!-- about member -->
+                    <div class="member-info">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+                    </div>
+                    <!-- /about member -->
+                </article>
+            </div>
+            <!-- end team member -->
+
+            <!-- team member -->
+            <div class="col-md-3 col-sm-6 animated team" data-wow-duration="500ms" data-wow-delay="400ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 400ms; animation-name: fadeInDown;">
+                <article class="team-mate">
+                    <div class="member-photo">
+                        <!-- member photo -->
+                        <img class="img-responsive" src="../../../resource/image/homepage/team/member-3.jpg" alt="Meghna">
+                        <!-- /member photo -->
+
+                        <!-- member social profile -->
+                        <div class="mask">
+                            <ul class="clearfix">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                        <!-- /member social profile -->
+                    </div>
+
+                    <!-- member name & designation -->
+                    <div class="member-title">
+                        <h3>Michael Jonson</h3>
+                        <span>Web Developer</span>
+                    </div>
+                    <!-- /member name & designation -->
+
+                    <!-- about member -->
+                    <div class="member-info">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+                    </div>
+                    <!-- /about member -->
+                </article>
+            </div>
+            <!-- end team member -->
+
+            <!-- team member -->
+            <div class="col-md-3 col-sm-6 animated team" data-wow-duration="500ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 600ms; animation-name: fadeInDown;">
+                <article class="team-mate kill-margin-bottom">
+                    <div class="member-photo">
+                        <!-- member photo -->
+                        <img class="img-responsive" src="../../../resource/image/homepage/team/member-4.jpg" alt="Meghna">
+                        <!-- /member photo -->
+
+                        <!-- member social profile -->
+                        <div class="mask">
+                            <ul class="clearfix">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                        <!-- /member social profile -->
+                    </div>
+
+                    <!-- member name & designation -->
+                    <div class="member-title">
+                        <h3>Mo. Kha. Alamgir</h3>
+                        <span>SEO Specialist</span>
+                    </div>
+                    <!-- /member name & designation -->
+
+                    <!-- about member -->
+                    <div class="member-info">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+                    </div>
+                    <!-- /about member -->
+                </article>
+            </div>
+            <!-- end team member -->
+
+        </div>  	<!-- End row -->
     </div>   	<!-- End container -->
 </section>
 
