--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -46,7 +46,7 @@
           </div>
           <div>
             <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" [(ngModel)]=rememberme name="rememberme" > 记住密码
+              <input class="form-check-input" type="checkbox" [(ngModel)]=rememberme name="rememberme" > 7天内记住登录状态
             </label>
           </div>
         </form>
