--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,30 +1,5 @@
-
 <header class="bgImage">
-    <nav class="navbar navbar-toggleable-md navbar-inverse bg-faded poptop">
-        <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Bit Studio.</a>
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" [routerLink]="['/homepage']">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link pointer" data-toggle="modal" data-target="#LogoutModal">Logout</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" [routerLink]="['/homepage']">Disabled</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+    <navbar></navbar>
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-14 text-center">
