--- a/src/app/components/forums/forums.component.html
+++ b/src/app/components/forums/forums.component.html
@@ -1,15 +1,17 @@
-<header class="bgImage">
+<div class="bgImage">
     <navbar></navbar>
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="col-14 text-center">
-                <div class="jumbotron jumbotron-fluid bg-faded">
-                    <div class="display-tc animate-box fadeIn animated-fast" data-animate-effect="fadeIn">
-                        <h1 class="display-3">We are Bit Studio</h1>
-                        <button type="button" class="btn btn-outline-success btn-lg">Join Us</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="list-group">
+      <div class="list-group-item pointer">
+        <span class="label label-default label-pill pull-right">14</span>
+        Cras justo odio
+      </div>
+      <div class="list-group-item pointer">
+        <span class="label label-default label-pill pull-right">2</span>
+        Dapibus ac facilisis in
+      </div>
+      <div class="list-group-item pointer">
+        <span class="label label-default label-pill pull-right">1</span>
+        Morbi leo risus
+      </div>
     </div>
-</header>
+</div>
