--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -23,6 +23,29 @@
 .poptop{
     z-index:1000;
 }
+
+.label-default {
+  background-color: #818a91;
+}
+.label-pill {
+  padding-right: .6em;
+  padding-left: .6em;
+  border-radius: 1rem;
+}
+.label {
+  display: inline-block;
+  padding: .25em .4em;
+  font-size: 75%;
+  line-height: 1;
+  color: #fff;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25rem;
+}
+.pull-right {
+  float: right!important;
+}
+
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
         background-image: url("../../../resource/image/homepage/1200x747.jpg");
