--- a/src/app/components/forums/forums.component.html
+++ b/src/app/components/forums/forums.component.html
@@ -1,17 +1,19 @@
 <div class="bgImage">
     <navbar></navbar>
-    <div class="list-group">
-      <div class="list-group-item pointer">
-        <span class="label label-default label-pill pull-right">14</span>
-        Cras justo odio
-      </div>
-      <div class="list-group-item pointer">
-        <span class="label label-default label-pill pull-right">2</span>
-        Dapibus ac facilisis in
-      </div>
-      <div class="list-group-item pointer">
-        <span class="label label-default label-pill pull-right">1</span>
-        Morbi leo risus
-      </div>
+    <div class="list">
+        <ul class="list-group">
+          <li class="list-group-item pointer">
+            <span class="label label-default label-pill pull-right">14</span>
+            Cras justo odio
+          </li>
+          <li class="list-group-item pointer">
+            <span class="label label-default label-pill pull-right">2</span>
+            Dapibus ac facilisis in
+          </li>
+          <li class="list-group-item pointer">
+            <span class="label label-default label-pill pull-right">1</span>
+            Morbi leo risus
+          </li>
+        </ul>
     </div>
 </div>
