--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -46,6 +46,13 @@
   float: right!important;
 }
 
+.list{
+    width:40%;
+    margin-left: 30%;
+    margin-top: 50px;
+    position: fixed;
+}
+
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
         background-image: url("../../../resource/image/homepage/1200x747.jpg");
