--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -4,55 +4,19 @@
     width: 100%;
     height : 100%;
 }
-.bg-faded{
-    background-color: transparent!important;
-}
-.navbar{
-    position: absolute!important;
-    width: 100%;
- }
 .text-center{
     text-align: center;
 }
 .row{
     margin: 5px!important;
 }
-.jumbotron{
-    padding-top: 13rem!important;
+.forumContainer{
+    top: 10%;
+    left: -5%;
 }
-.poptop{
-    z-index:1000;
+#context{
+    height:500px;
 }
-
-.label-default {
-  background-color: #818a91;
-}
-.label-pill {
-  padding-right: .6em;
-  padding-left: .6em;
-  border-radius: 1rem;
-}
-.label {
-  display: inline-block;
-  padding: .25em .4em;
-  font-size: 75%;
-  line-height: 1;
-  color: #fff;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: .25rem;
-}
-.pull-right {
-  float: right!important;
-}
-
-.list{
-    width:40%;
-    margin-left: 30%;
-    margin-top: 50px;
-    position: fixed;
-}
-
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
         background-image: url("../../../resource/image/homepage/1200x747.jpg");
