--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -15,7 +15,12 @@
     left: -5%;
 }
 #context{
-    height:500px;
+    height:600px;
+    overflow-y: scroll;
+}
+#context::-webkit-scrollbar{
+    width:0px;
+    height:0px;
 }
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
