--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <header class="bgImage">
     <navbar></navbar>
     <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="justify-content-md-center">
             <div class="col-14 text-center">
                 <div class="jumbotron jumbotron-fluid bg-faded">
                     <div class="display-tc animate-box fadeIn animated-fast" data-animate-effect="fadeIn">
