--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -165,3 +165,20 @@
   </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="MailSuccessModal" tabindex="-1" role="dialog" aria-labelledby="MailSuccessModalLabel" aria-hidden="true" #MailSuccessModal>
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="MailSuccessModalLabel">发送成功</h5>
+      </div>
+      <div class="modal-body">
+        邮件已发送，注意查收！
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary"  data-dismiss="modal" >确定</button>
+      </div>
+    </div>
+  </div>
+</div>
+
