--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -76,7 +76,7 @@
       <div class="modal-body">
         <form #SignInForm="ngForm">
           <div class="form-group">
-            <label class="form-control-label" for="username">用户名 <i class="fa fa-user-circle" aria-hidden="true"></i></label>
+            <label class="form-control-label" >用户名 <i class="fa fa-user-circle" aria-hidden="true"></i></label>
             <input #signInUsernameInput="ngModel" type="text"required minlength="5" maxlength="10" [(ngModel)]="username" (keyup)="checkusername()" class="form-control" name="username" placeholder="请输入用户名">
             <div class="alert alert-danger" role="alert"  [hidden]="(signInUsernameInput.valid || signInUsernameInput.pristine ) && usernamevalidate">
               <label *ngIf="SignInForm.controls.username?.errors?.required">请输入用户名</label>
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="form-control-label" for="password">Password</label>
+            <label class="form-control-label">密码</label>
             <input #signInPasswordInput="ngModel" required validateEqual="confirmPassword" reverse="true" type="password" [(ngModel)]="password" class="form-control" name="password" placeholder="请输入密码">
             <div class="alert alert-danger" role="alert" [hidden]="signInPasswordInput.valid || signInPasswordInput.pristine">
               <label *ngIf="SignInForm.controls.password?.errors?.required">请输入密码</label>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="form-control-label" for="password">邮箱</label>
+            <label class="form-control-label" >邮箱</label>
             <input #emailInput="ngModel" required pattern="^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$" type="email" [(ngModel)]="email"  class="form-control" name="email" placeholder="请输入邮箱">
             <div class="alert alert-danger" role="alert" [hidden]="emailInput.valid || emailInput.pristine">
               <label *ngIf="SignInForm.controls.email?.errors?.required">请输入邮箱</label>
@@ -148,7 +148,7 @@
       <div class="modal-body">
         <form #FindPasswordForm="ngForm">
           <div class="form-group">
-            <label class="form-control-label" for="username">用户名 <i class="fa fa-user-circle" aria-hidden="true"></i></label>
+            <label class="form-control-label" >用户名 <i class="fa fa-user-circle" aria-hidden="true"></i></label>
             <input #findPasswordUsername="ngModel" type="text"required minlength="5" maxlength="10" [(ngModel)]="username" (keyup)="checkusername()" class="form-control" name="username" placeholder="请输入要找回的用户名">
             <div class="alert alert-danger" role="alert"  [hidden]="(findPasswordUsername.valid || findPasswordUsername.pristine ) && !usernamevalidate">
               <label *ngIf="FindPasswordForm.controls.username?.errors?.required">请输入用户名</label>
